@@ -18,6 +18,7 @@ Changelog for 1.3.14
 * Fixed POD issues with lsmb-request.pl (h/t Robert C) (Chris T item 3472648)
 * Fixed means of adding parts/editing pricelist missing (Chris T, bug 3442163)
 * Fixed unknown db detected as SQL-Ledger (Chris T, bug 3510039)
+* Fixed pos ignores pd_proto and always connects tcp (Chris T, bug 3458112)
 
 Andres B is Andres Basile
 
